[gd_scene load_steps=9 format=3 uid="uid://b55klx3ybpfdv"]

[ext_resource type="Script" path="res://Agents/Sage/Slow_Zone.gd" id="1_6sgui"]
[ext_resource type="Texture2D" uid="uid://bo68haojp16il" path="res://Textures/Agents/Sage/SageWallTexture.png" id="2_v5vlb"]
[ext_resource type="Material" uid="uid://llxew2w8eohy" path="res://Materials/AgentSpecific/Sage/SageWall.tres" id="3_53fwp"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ktui5"]
height = 0.1
radius = 0.3

[sub_resource type="Curve" id="Curve_t3nfj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4pbpt"]
curve = SubResource("Curve_t3nfj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f5i15"]
emission_shape = 3
emission_box_extents = Vector3(6, 0.1, 6)
gravity = Vector3(0, 9.8, 0)
scale_curve = SubResource("CurveTexture_4pbpt")
turbulence_enabled = true
turbulence_noise_strength = 3.0

[sub_resource type="BoxMesh" id="BoxMesh_rp0f5"]
material = ExtResource("3_53fwp")
size = Vector3(0.1, 0.1, 0.1)

[node name="Slow_Zone" type="Node3D"]
script = ExtResource("1_6sgui")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Decal" type="Decal" parent="."]
visible = false
texture_albedo = ExtResource("2_v5vlb")

[node name="Area3d" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3d" type="CollisionShape3D" parent="Area3d"]
shape = SubResource("CylinderShape3D_ktui5")

[node name="TickTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="RotationPoint" type="Node3D" parent="."]

[node name="RayCast3d" type="RayCast3D" parent="RotationPoint"]
target_position = Vector3(0, -50, 0)
debug_shape_custom_color = Color(1, 0, 0.0352941, 1)
debug_shape_thickness = 5

[node name="GpuParticles3d" type="GPUParticles3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
cast_shadow = 0
ignore_occlusion_culling = true
gi_mode = 0
amount = 128
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_f5i15")
draw_pass_1 = SubResource("BoxMesh_rp0f5")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
